[package]
name = "fifo-cache"
version = "0.1.1"
rust-version = "1.59"
edition = "2021"

authors = ["David Dernoncourt"]
description = "A simple FIFO cache with TTL (Time To Live) support"
license = "AGPL-3.0-or-later"
repository = "https://tbd.com/tbs/fifo-cache"
keywords = ["cache", "fifo", "ttl", "memory"]
categories = ["caching", "data-structures"]

[dependencies]

[profile.test]
strip = true
