[package]
name = "fifo-cache"
version = "0.1.1"
edition = "2021"
rust-version = "1.59"

authors = ["David Dernoncourt <daviddernoncourt.com>"]
license = "MIT"
description = "A minimalist FIFO cache with TTL (Time To Live) support"
categories = ["caching"]
keywords = ["cache", "fifo", "ttl"]
readme = "readme.md"
repository = "https://framagit.org/dder/fifo-cache"
exclude = [
  "/.github/",
  "/.vscode/",
  "/.gitlab-ci.yml"
]
